language/move-lang/tests/move_check/typing/if_condition_invalid.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/if_condition_invalid.move:3:13
  │
3 │         if (()) () else ();
  │             ^^
  │             │
  │             Invalid if condition
  │             Expected: 'bool'
  │             Given: '()'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/if_condition_invalid.move:4:13
  │
4 │         if ((())) () else ();
  │             ^^^^
  │             │
  │             Invalid if condition
  │             Expected: 'bool'
  │             Given: '()'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/if_condition_invalid.move:5:13
  │
5 │         if ({}) () else ()
  │             ^^
  │             │
  │             Invalid if condition
  │             Expected: 'bool'
  │             Given: '()'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/if_condition_invalid.move:9:13
  │
8 │     fun t1<T: drop>(x: T) {
  │                        - Given: 'T'
9 │         if (x) () else ();
  │             ^
  │             │
  │             Invalid if condition
  │             Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_condition_invalid.move:10:13
   │
10 │         if (0) () else ();
   │             ^
   │             │
   │             Invalid if condition
   │             Expected: 'bool'
   │             Given: integer

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_condition_invalid.move:11:13
   │
11 │         if (@0x0) () else ()
   │             ^^^^
   │             │
   │             Invalid if condition
   │             Expected: 'bool'
   │             Given: 'address'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_condition_invalid.move:15:13
   │
15 │         if ((false, true)) () else ();
   │             ^^^^^^^^^^^^^
   │             │
   │             Invalid if condition
   │             Expected: 'bool'
   │             Given: '(bool, bool)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_condition_invalid.move:16:13
   │
16 │         if ((0, false)) () else ()
   │             ^^^^^^^^^^
   │             │
   │             Invalid if condition
   │             Expected: 'bool'
   │             Given: '({integer}, bool)'

